2005-02-16  Julio M. Merino Vidal  <jmmv@menta.net>

	* Makefile.am: Append $(BOOST_SUFFIX) to -lboost_unit_test_framework
	to fix 'make check' on systems where boost libraries can only be
	found by passing the exact suffix as part of the name.

2005-02-16  Julio M. Merino Vidal  <jmmv@menta.net>

	* monotone.texi: Fix a typo (hexidecimal to hexadecimal).  Also
	change an example command to append stuff to ~/.monotonerc, instead
	of completely destroying the possibily existing file.  Addresses
	bug #11136.

2005-02-16  Julio M. Merino Vidal  <jmmv@menta.net>

	* cryptopp/config.h: Use uint{8,16,32,64}_t as size types instead of
	trying to match them to unsigned char/int/long/long long respectively.
	Should fix build on FreeBSD/sparc64, as seen in bug #10203.

2005-02-16  Julio M. Merino Vidal  <jmmv@menta.net>

	* INSTALL:
	* Makefile.am:
	* configure.ac: Add the --disable-large-file option to manually
	disable large file support from the builtin sqlite (compatibility
	with old systems and FAT).  Addresses bug #8380.

2005-02-16  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_undo_update.at: New todo.
	* testsuite.at: Add it.

2005-02-15  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.1: Add cursory note about "automate".
	* monotone.texi: Synchronize with manpage.

2005-02-15  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc: Add "Error conditions" to the standard comment
	sections.
	
	* monotone.texi (Scripting): New section.
	(Automation): New section.
	
	* tests/t_automate_heads.at: Test behavior with nonexistent
	branch.

2005-02-14  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_merge_normalization_edge_case.at: New test.
	* testsuite.at: Add it.

	* diff_patch.cc (normalize_extents): Soften the warning message
	now that we have one test case.

2005-02-14  Matthew A. Nicholson  <mnicholson@digium.com>

	* std_hooks.lua: Add vimdiff merge hooks.
	
2005-02-14  Nathaniel Smith  <njs@codesourcery.com>

	* std_hooks.lua: Remove tabs.
